IC-Test/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BillToQuoteDate__c</fullName>
        <description>Most recent date this Contact was updated to show that they have a Bill-To quote to be emailed on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.</description>
        <inlineHelpText>Date of the most recent quote sent to this contact.</inlineHelpText>
        <label>Current Bill-To Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BilltoQuoteEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that this Contact is to receive a Bill-To quote email on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.</description>
        <label>Current Bill-To Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactCustShipTo__c</fullName>
        <description>This field mirrors the Account.CustomerShipTo__c field on the Account object. Used in ExactTarget and other processes.</description>
        <formula>if( AccountId = &quot;&quot;,&quot;&quot;,Account.CustomerShipTo__c)</formula>
        <inlineHelpText>6 digit Bill To number plus the 3 digit Ship To number.</inlineHelpText>
        <label>Customer Ship-To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCustomer__c</fullName>
        <description>Bill-To Account for which quotes are sent to this Contact</description>
        <formula>IF( EmailQuoteBillTo__c  = True, Account.CustomerNumber__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bill-To Account for which quotes are sent to this Contact</inlineHelpText>
        <label>Receives Bill-To Quotes for Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Used to indicate contact is no longer current, but we need to keep the contact around because they have call history.  When a contact is inactivated, the contact owner automatically changes to &quot;SFDC Admin&quot;. Call History is retained, but contact no longer syncs with Account Owner&apos;s Outlook.</description>
        <inlineHelpText>Change status to Inactive if Contact is no longer current.  This retains Call History but stops contact from syncing with Outlook.  When a contact is inactivated, the contact owner automatically changes to &quot;SFDC Admin&quot;.</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( LEN( FirstName ) = 0, &quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( LastName ) = 0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Title ) = 0, &quot;Title, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Phone ) = 0, &quot;Phone Number, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Email ) = 0, &quot;Email Address, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( MailingCity ) = 0, &quot;Mailing City, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( MailingState ) = 0, &quot;Mailing State, &quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( FirstName ) = 0, 0, 15 ) + 
IF( LEN( LastName ) = 0, 0, 15) + 
IF( LEN( Title ) = 0, 0, 10) + 
IF( LEN( Phone ) = 0, 0, 15) + 
IF( LEN( Email ) = 0, 0, 15) + 
IF( LEN( MailingCity ) = 0, 0, 15) + 
IF( LEN( MailingState ) = 0, 0, 15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Driver__c</fullName>
        <label>Demand Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Reputation &amp; Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Portfolio Proficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace Command</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Outcome__c</fullName>
        <label>Economic Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Cost/Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue/Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailQuoteBillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Contact receives Bill-To price quote emails for the parent (Bill-To) account.</description>
        <inlineHelpText>Check this box for contacts who should receive Price Quote emails for their parent Bill-To account.</inlineHelpText>
        <label>Email Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailQuoteShipTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Contact receives Ship-To price quote emails for the parent (Ship-To) account.
CURRENTLY NOT USED!!</description>
        <inlineHelpText>NOT USED, BUT NEEDED FOR DATASTAGE PROCESS TO WORK.</inlineHelpText>
        <label>Email Quote - Ship-To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailURL__c</fullName>
        <formula>HYPERLINK(&quot;http://pages.exacttarget.com/page.aspx?QS=38dfbe491fab00eac6d4c90f801056288eeb7a9c95c1ba4a69241cba504996ad&amp;sf=&quot; &amp; Id, &quot;View Emails Sent to this Contact on Your Behalf&quot;)</formula>
        <inlineHelpText>View HTML emails sent to this contact, including quotes, change notifications and promotional emails.</inlineHelpText>
        <label>Emails Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FalseFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not ever under any circumstances set this to True. It must remain False in order for the weekly Quoting Update process to work.</description>
        <inlineHelpText>Never ever ever change the value of this field. It must stay &quot;False&quot;.</inlineHelpText>
        <label>False Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>Needed for various reports where not otherwise available.</description>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ActivityTypeID__c</fullName>
        <label>ActivityTypeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__InnovadexID__c</fullName>
        <label>InnovadexID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntegratedMailingCountry__c</fullName>
        <label>Integrated Mailing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedMailingState__c</fullName>
        <label>Integrated Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedOtherCountry__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Integrated Other Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedOtherState__c</fullName>
        <label>Integrated Other State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_PerNr__c</fullName>
        <description>PerNr of the Contact&apos;s Owner</description>
        <formula>Owner.PerNr__c</formula>
        <inlineHelpText>PerNr of the Contact&apos;s Owner</inlineHelpText>
        <label>Owner PerNr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToQuoteDate__c</fullName>
        <description>Most recent date this Contact was updated to show that they have a Ship-To quote to be emailed on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader. PLACEHOLDER - NOT CURRENTLY USED</description>
        <label>Current Ship-To Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipToQuoteEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that this Contact is to receive a Ship-To quote email on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.  PLACEHOLDER - NOT CURRENTLY USED.</description>
        <label>Current Ship-To Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Profile__c</fullName>
        <label>Stakeholder Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_of_Relationship__c</fullName>
        <label>State of Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEMPMailingStateLength__c</fullName>
        <description>temporary for data cleanup</description>
        <formula>LEN( TEMPMailingStateShort__c )</formula>
        <label>TEMPMailingStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPMailingStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPMailingStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPOtherStateLength__c</fullName>
        <description>temp for data cleanup</description>
        <formula>LEN( TEMPOtherStateShort__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMPOtherStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPOtherStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPOtherStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Contact. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBAS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts1</fullName>
        <booleanFilter>(1 and 2) and (3 or 4 or 5 or 6 or 7 or 8)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.TITLE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.PHONE1</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_STREET</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_ZIP</field>
            <operation>equals</operation>
        </filters>
        <label>*CONTACTS:Clean-up Competition INCOMPLTE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Contacts_with_Email_Quote_Flag_Mgr3</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ContactCustomer__c</columns>
        <columns>EmailQuoteBillTo__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>HAWER,HAEAR,HACER</value>
        </filters>
        <label>All Contacts with Email Quote Flag - Mgr</label>
        <language>en_US</language>
        <sharedTo>
            <group>AllGeneralManagers</group>
            <group>AllIndustryManagers</group>
            <group>AllRVPs</group>
            <group>AllSalesManagers</group>
            <group>ChemCareManagers</group>
            <group>GBASSupport</group>
            <group>MarketDevelopmentGroup</group>
            <group>ProductManagersAll</group>
            <group>ProductManagersCausticSoda</group>
            <group>ProductManagersNational</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>CAMContactUpdates</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>7/23/2009 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>SFDCADMI</value>
        </filters>
        <label>CAM Contact Updates</label>
        <language>en_US</language>
        <sharedTo>
            <role>GlobalExecutives</role>
            <roleAndSubordinates>CorporateAccountVP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CONTACTS_w_Duplicate_Email_Addresses</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>EmailQuoteBillTo__c</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>CONTACTS w/ Duplicate Email Addresses</label>
        <language>en_US</language>
        <sharedTo>
            <role>MarketDevelopers</role>
            <role>MarketDevelopmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContactsOwnedbyOldUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>old</value>
        </filters>
        <label>Contacts Owned by Old Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacts_with_Email_Quote_Flag</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>EmailQuoteBillTo__c</columns>
        <columns>ContactCustomer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>HAWER,HAEAR,HACER</value>
        </filters>
        <label>My Contacts:Email Quote Flag</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ContactswithnoAccountrelationship</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notContain</operation>
            <value>old</value>
        </filters>
        <label>Contacts with no Account relationship</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D2M_Cold_Leads_ALL_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>D2M:House Account Leads - ALL Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D2M_Cold_Leads_ALL_Contacts1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>D2M:Cold Leads - MY Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D2M_Contacts_Leads_ALL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>D2M:Cold Leads - ALL Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>D2M_House_Account_Leads_ALL_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CAMPAIGN_MEMBER.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>D2M:House Account Leads - MY Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_Address_Issues</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notContain</operation>
            <value>.com,.net,.org,.gov,.edu,.tv,.mil,.us,.biz,.info,.ca,.aero</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notContain</operation>
            <value>@</value>
        </filters>
        <label>My Contacts:Email Address Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Emailed_Quote_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>EmailQuoteBillTo__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ShipToQuoteDate__c</columns>
        <columns>ContactCustShipTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailQuoteBillTo__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Emailed Quote Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <label>Inactive</label>
    </recordTypes>
    <validationRules>
        <fullName>ActiveCannotBelongToAdminId</fullName>
        <active>true</active>
        <description>If changing back to Active, they have to assign to a real user</description>
        <errorConditionFormula>AND( ISPICKVAL(Contact_Status__c, &quot;Active&quot;) ,  OwnerId = &apos;00530000000dTej&apos;, NOT(ISCHANGED(OwnerId)))</errorConditionFormula>
        <errorMessage>Must assign to a real person if reactivating this contact.
Press “[Change]” next to the Contact Owner field to change the owner, then Save, and contact will automatically be reactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BTQQuoteContactOnShipToAcctOnly</fullName>
        <active>true</active>
        <description>Contacts set up as a Price Quote Email contact must be on Ship-To accounts (not prospects etc)</description>
        <errorConditionFormula>AND(Account.CustomerNumber__c  = &quot;&quot;,EmailQuoteBillTo__c = true)</errorConditionFormula>
        <errorDisplayField>EmailQuoteBillTo__c</errorDisplayField>
        <errorMessage>Contact&apos;s Account Record Type must be Ship-To to receive quote emails.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BTQQuoteContactRequiresEmailAddress</fullName>
        <active>true</active>
        <description>Contacts set up as a Price Quote Email contact must have an email address</description>
        <errorConditionFormula>AND( Email   = &quot;&quot;, EmailQuoteBillTo__c = true,NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email address required for a contact to receive prices quotes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactInvalidCharacters</fullName>
        <active>true</active>
        <description>RegEx based on ExactTarget email validation rules</description>
        <errorConditionFormula>AND(NOT(Regex( Email , &quot;^[a-z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+)*@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.)|(([a-zA-Z0-9_\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})$&quot;)),NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Invalid Email Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailCannotContainUnivarusaDotCom</fullName>
        <active>true</active>
        <description>Email Addresses can&apos;t contain &quot;Univarusa.com&quot; as it can create problems for the Exact Target Email Quotes Job. Exception for SysAdmins on their own contacts, so we can set up test data as needed.</description>
        <errorConditionFormula>AND(CONTAINS( Email , &quot;univarusa.com&quot;),  NOT(CONTAINS( $Profile.Name,&quot;System Admin&quot;)))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>&quot;Univarusa.com&quot; email addresses are not allowed on Contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FalseFlagMustBeFalse</fullName>
        <active>true</active>
        <description>prevents this from ever being set to true</description>
        <errorConditionFormula>FalseFlag__c  = True</errorConditionFormula>
        <errorDisplayField>FalseFlag__c</errorDisplayField>
        <errorMessage>False Flag value must always be False</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveCannotBelongToRealPerson</fullName>
        <active>true</active>
        <description>If inactive, can&apos;t belong to a real user.  This only happens when they create a new contact and immediately set it to Inactive before saving the first time.</description>
        <errorConditionFormula>AND( ISNEW() , ISPICKVAL(Contact_Status__c, &quot;Inactive&quot;) )</errorConditionFormula>
        <errorDisplayField>Contact_Status__c</errorDisplayField>
        <errorMessage>Cannot save new contact as Inactive.  To inactivate a contact, first save as Active, then go back in and edit it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoEmailQuotesForInactiveAccounts</fullName>
        <active>true</active>
        <description>If we allow quotes to be emailed to inactive UVX customers, we run the risk of deleting those accounts in the monthly account cleanup.</description>
        <errorConditionFormula>AND( Account.CustomerStatus__c  = &quot;INACTIVE&quot;, EmailQuoteBillTo__c  = true, NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorDisplayField>EmailQuoteBillTo__c</errorDisplayField>
        <errorMessage>This contact&apos;s Account is inactive in UVX - cannot email quotes.  Please reassign Contact to an active account before setting quote flag.</errorMessage>
    </validationRules>
</CustomObject>